--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <li><a href="">Services</a></li>
                 <li><a href="">Work</a></li>
                 <li><a href="">Shop</a></li>
-                <li><a href="">Blog</a></li>
+                <li><a href="">Blogs</a></li>
             </ul>
         </nav>
 
