--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <!--Nav_links-->
         <nav class="link_wraps">
             <ul class="Nav_ul bg-red-900">
-                <li><a href="">Homes</a></li>
+                <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="">Services</a></li>
                 <li><a href="">Work</a></li>
